# llm_vlm_memory_estimator

./: .gitignore  CLI_README.md  LICENSE  README.md  RESTRUCTURE_SUMMARY.md  app.py  cli.py  llm_vlm_memory_estimation.md  pyproject.toml  requirements.txt  setup.py
components/: logits_kv.py  overheads.py  weights.py
config/: builder.py  loader.py
core/: config.py  model_info.py  results.py  types.py
docs/: llm_vlm_memory_estimation_verification_playbook_markdown.md
formulas/: constants.py
llm_memory_estimator/: __init__.py  __main__.py  app.py  cli.py
llm_memory_estimator/components/: activations.py  base.py  trainable_state.py
llm_memory_estimator/config/: builder.py  validator.py
llm_memory_estimator/core/: config.py  estimator.py
llm_memory_estimator/optimizations/: __init__.py  base.py  registry.py
llm_memory_estimator/parallelism/: aggregator.py
llm_memory_estimator/probe/: __init__.py  results.py  runner.py
llm_memory_estimator/utils/: factory.py
optimizations/builtin/: __init__.py
parallelism/: __init__.py
scripts/: estimate_memory.py
